[package]
name = "scratch-test-graph-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-getters = "0.5.0"
either = "1.15.0"

[dependencies.svalue]
git = "https://github.com/Marcel-Scherzinger/scratch-test-value"
package = "scratch-test-value"
default-features = false

[dependencies.smodel]
git = "https://github.com/Marcel-Scherzinger/scratch-test-model"
package = "scratch-test-model"
default-features = true
